[project]
name = "envoyproto"
dynamic = ["version"]
dependencies = [
	"protobuf >= 3.15.0"
]

[build-system]
requires = [
	"setuptools >= 59.0",
	"wheel",
	"hatchling",
	"hatch-vcs",
]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
dependencies = [
	"protobuf >= 3.15.0",
	"hatchling",
]

[tool.hatch.metadata.hooks.custom]

[tool.hatch.version]
source = "vcs"


[tool.hatch.build.targets.wheel]
packages = ["envoyproto"]
exclude = [
	"envoyproto/build_hook.py",
]
ignore-vcs = true
